--- a/static/style/main.css
+++ b/static/style/main.css
@@ -88,7 +88,6 @@ main article {
     color: #F1F0F0;
 }
 
-
 /* Headings */
 h1, h2 {
     color: #F1F0F0;
@@ -97,13 +96,14 @@ h1, h2 {
     font-size: 2.5em;
 }
 
-
 /* Transition Text */
 p.scroll {
     font-size: 1.25em;
     font-weight: 500;
 }
-
+p.description {
+    font-size: 1.25em;
+}
 
 /* Links */
 a {
@@ -112,4 +112,36 @@ a {
 }
 a:visited {
     text-decoration: none;
+}
+
+
+/*
+ *     __
+ *    /  )                       _/_
+ *   /--/ ____  o ______  __.  o /  __ ____
+ *  /  (_/ / <_<_/ / / <_(_/|_<_<__(_)/ / <_
+ *
+ *
+ */
+.headline {
+    margin: 10px;
+    padding: 10px;
+}
+.headline .wrapper {
+    display: inline-block;
+}
+.headline.push b {
+  opacity: 0;
+  text-align: center;
+  /*position: absolute;*/
+}
+.headline.push b.visible {
+   visibility: visible;
+   opacity: 1;
+   transition: visibility 0s, opacity 0.6s ease;
+}
+.headline.push b.hidden {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
 }
