--- a/style/main.css
+++ b/style/main.css
@@ -80,12 +80,11 @@ main article {
  *        / /        /|         /           /
  *       ' '        |/         '           '
  */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,500,400italic|Roboto+Condensed:400,700);
 
 /* Base style */
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto';
     font-weight: 400;
     color: #F1F0F0;
 }
@@ -93,9 +92,8 @@ main article {
 /* Headings */
 h1, h2 {
     color: #F1F0F0;
-    font-family: 'Noto Sans', 'Roboto', sans-serif;
-    font-weight: 500;
-    font-weight: 700;
+    font-family: 'Roboto';
+    font-weight: 400;
     font-size: 2.5em;
     margin: .45em 0em 2em 0em;
 }
