--- a/style/main.css
+++ b/style/main.css
@@ -47,10 +47,6 @@ main {
     flex-flow: column;
     align-content: center;
     height: 600px;
-    background-image: url("../img/SIGGRAPH_Logo.svg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
 main article {
@@ -146,4 +142,12 @@ a:visited {
   visibility: hidden;
   opacity: 0;
   position: absolute;
+}
+
+.garnet, .gold {
+    pointer-events: all;
+}
+
+.garnet:hover, .gold:hover {
+
 }
