--- a/style/main.css
+++ b/style/main.css
@@ -39,7 +39,7 @@
 body {
     padding: 0px 0px 0px 0px;
     margin: 0em 0em 0em 0em;
-    background-color: #5C2020;
+    background-color: #D8D8D8;
 }
 
 main {
@@ -86,12 +86,11 @@ main article {
 * {
     font-family: 'Roboto';
     font-weight: 400;
-    color: #F1F0F0;
+    color: #3E4147;
 }
 
 /* Headings */
 h1, h2 {
-    color: #F1F0F0;
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 2.5em;
@@ -99,11 +98,12 @@ h1, h2 {
 }
 
 /* Transition Text */
-p.scroll {
-    font-size: 1.25em;
-    font-weight: 500;
+.headline p {
+    font-size: 1em;
+    font-weight: bold;;
 }
 p.description {
+    font-weight: bold;
     font-size: 1.25em;
 }
 
@@ -129,21 +129,19 @@ a:visited {
     margin: 10px;
     padding: 10px;
 }
-.headline .wrapper {
-    display: inline-block;
+
+.headline p {
+    opacity: 0;
+    text-align: center;
 }
-.headline.push b {
-  opacity: 0;
-  text-align: center;
-  /*position: absolute;*/
-}
-.headline.push b.visible {
+.headline.push p.visible {
    visibility: visible;
    opacity: 1;
    transition: visibility 0s, opacity 1s ease;
 }
-.headline.push b.hidden {
+.headline.push p.hidden {
   visibility: hidden;
   opacity: 0;
   position: absolute;
+  transition: visiblity 1s, opacity 1s ease;
 }
