--- a/style/main.css
+++ b/style/main.css
@@ -8,7 +8,7 @@
  */
 .centered {
     margin: auto;
-    width: 60%;
+    width: 80%;
     text-align: center;
 }
 
@@ -36,6 +36,11 @@
  *      Base text: #F1F0F0
  *      Gold: #D7AE70
  */
+
+header {
+    padding: .45em 0em 6em 0em;
+}
+
 body {
     padding: 0px 0px 0px 0px;
     margin: 0em 0em 0em 0em;
@@ -43,27 +48,36 @@ body {
 }
 
 main {
-    position: relative;
     display: flex;
     flex-flow: column;
     align-content: center;
-    height: 600px;
     text-align: center;
     z-index: 1;
 }
 
-main article {
+.summary {
+    position: relative;
     margin: auto; /* Center main content vertically */
-    padding: 20px;
-
+    padding: 40px;
+    background-color: ;
 }
+
+#logo {
+    position: absolute;
+    height: 200%;
+    width: 200%;
+    left: -50%;
+    top: -30%;
+    z-index: -1;
+}
+
+/* User Interface*/
 
 .button {
     padding: .25em;
     border-style: solid;
-    border-color: #D7AE70;
-    color: #D7AE70;
-    background-color:  #5C2020;
+    border-color: #FFFC7F;
+    background-color: #3E4147;
 }
 .button:hover {
     text-decoration: none !important;
@@ -90,25 +104,28 @@ main article {
 
 /* Headings */
 h1, h2 {
+    text-shadow: 1px 1px 0px #FFFC7F;
     font-family: 'Roboto';
     font-weight: 400;
-    font-size: 2.5em;
-    margin: .45em 0em 2em 0em;
+    font-size: 3em;
 }
 
 /* Transition Text */
 .headline p {
-    font-size: 1em;
-    font-weight: bold;;
+    font-size: 1.25em;
+    font-weight: bold;
+    background-color: #FFFC7F;
 }
 p.description {
+    text-shadow: 2px 2px 0px #FFFC7F;
     font-weight: bold;
-    font-size: 1.25em;
+    font-size: 2.25em;
+    margin-bottom: 0px;
 }
 
 /* Links */
 a {
-    color: #D7AE70;
+    color: #FFFC7F;
     text-decoration: none;
 }
 a:visited {
@@ -127,30 +144,24 @@ a:visited {
 .headline {
     margin: 10px;
     padding: 10px;
+    display: flex;
 }
 
 .headline p {
     opacity: 0;
     text-align: center;
 }
-.headline.push p.visible {
-   visibility: visible;
-   opacity: 1;
-   transition: visibility 0s, opacity 1s ease;
+.headline p.visible {
+    margin: auto;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s, opacity 1s ease;
 }
-.headline.push p.hidden {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  transition: visiblity 1s, opacity 1s ease;
-}
-
-#logo {
+.headline .hidden {
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
-    width: 100%;
-    left: 0%;
-    top: -40%;
-    z-index: -1;
+    transition: visiblity 1s, opacity 1s ease;
 }
 
 .garnet, .gold {
