--- a/style/main.css
+++ b/style/main.css
@@ -117,7 +117,7 @@ h1, h2 {
     background-color: #FFFC7F;
 }
 p.description {
-    text-shadow: 2px 2px 0px #FFFC7F;
+    text-shadow: 2px 2px 0px #D8D8D8;
     font-weight: bold;
     font-size: 2.25em;
     margin-bottom: 0px;
