Sets `box-sizing` default to `border-box`
Sets `border-box` on html node, setting `*`, `*::before`, '*::after' to inherit
so that the `box-sizing` can be easily changed.

--- a/style/normalize.css
+++ b/style/normalize.css
@@ -417,3 +417,15 @@ textarea {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
+
+/**
+ * Fixes box model, alowing for different uses but setting default to
+ * border-box.
+ */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
