--- a/style/main.css
+++ b/style/main.css
@@ -64,32 +64,47 @@ body {
 }
 
 .summary {
-    position         : relative;
     margin           : auto; /* Center main content vertically */
     padding          : 40px;
     background-color : ;
 }
 
+.container {
+    padding    : 0.5em;
+    text-align : center;
+}
+
 #logo {
-    position : absolute;
-    height   : 200%;
-    width    : 200%;
-    left     : -50%;
-    top      : -30%;
-    z-index  : -1;
+    height  : 100%;
+    width   : 100%;
+    z-index : -1;
 }
 
 /* User Interface*/
 
 .button {
-    padding          : .25em;
     border-style     : solid;
-    border-color     : #FFFC7F;
+    border-color     : white;
     background-color : #3E4147;
+    padding          : 0.25em;
 }
+
+.button.signup {
+    position  : absolute;
+    left      : 50%;
+    top       : 50%;
+    transform : translateX(-50%);
+    /*margin    : 15% auto;*/
+    /*padding   : 10% 0%*/
+}
+
 .button:hover {
     text-decoration : none !important;
     box-shadow      : 2px 1px 5px #010101;
+}
+
+.masthead div.container {
+    height  : 60%;
 }
 
 
@@ -112,29 +127,22 @@ body {
 
 /* Headings */
 h1, h2 {
-    text-shadow : 1px 1px 0px #FFFC7F;
     font-family : 'Roboto';
     font-weight : 400;
-    font-size   : 3em;
+    font-size   : 2.5em;
 }
 
 /* Transition Text */
 .headline p {
-    font-size        : 1.25em;
+    font-size        : 2em;
     font-weight      : bold;
-    background-color : #FFFC7F;
-}
-p.description {
-    text-shadow   : 2px 2px 0px #D8D8D8;
-    font-weight   : bold;
-    font-size     : 2.25em;
-    margin-bottom : 0px;
 }
 
 /* Links */
 a {
-    color           : #FFFC7F;
+    color           : white;
     text-decoration : none;
+    font-weight     : bold;
 }
 a:visited {
     text-decoration : none;
