--- a/style/main.css
+++ b/style/main.css
@@ -97,7 +97,7 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform : translateX(-50%);
+    transform: translate(-50%, -50%);
 }
 
 .button:hover {
