--- a/style/main.css
+++ b/style/main.css
@@ -195,13 +195,10 @@ a:visited {
     opacity: 1;
     transition: visibility 0s, opacity 1s ease;
 }
-.headline .hidden {
+.headline p.hidden {
     opacity: 0;
-    position: absolute;
-    left: 60%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transition: left 4s, opacity 1s ease;
+    top: 100%;
+    transition: top 4s ease, opacity 1s ease;
 }
 
 .garnet, .gold {
