--- a/style/main.css
+++ b/style/main.css
@@ -51,7 +51,7 @@
  *  It contains the teaser animation, and stays fixed in position as the body
  *  of the website scrolls over it.
  */
-    position: fixed;
+    /*position: fixed;*/
     padding: 0.5em 2em 0.5em 2em;
     display: flex;
     flex-flow: column;
@@ -115,15 +115,19 @@ article {
 
 .headline {
     position: relative;
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
 }
 
 .headline p {
+    opacity: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
 
 /*
  *    ______
@@ -158,6 +162,7 @@ header h1 {
 .headline p {
     font-size: 2em;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 /* Links */
@@ -179,27 +184,49 @@ a:visited {
  *
  *
  */
-.headline {
-    margin: 10px;
-    padding: 10px;
-    display: flex;
-}
 
-.headline p {
-    opacity: 0;
-    text-align: center;
-}
+/* Headline */
+
 .headline p.visible {
-    margin: auto;
-    visibility: visible;
     opacity: 1;
-    transition: visibility 0s, opacity 1s ease;
+    animation: push-in 0.6s;
 }
 .headline p.hidden {
     opacity: 0;
-    top: 100%;
-    transition: top 4s ease, opacity 1s ease;
+    animation: push-out 0.6s;
 }
+
+@keyframes push-in {
+  0% {
+    opacity: 0;
+    transform: translate(-150%, -50%);
+  }
+  60% {
+    opacity: 1;
+    transform: translate(-40%, -50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@keyframes push-out {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  60% {
+    opacity: 0;
+    transform: translate(160%, -50%);
+  }
+  100% {
+    opacity: 0;
+    transform: translate(150%, -50%);
+  }
+}
+
+/* Logo */
 
 .garnet, .gold {
     pointer-events: all;
