--- a/style/main.css
+++ b/style/main.css
@@ -196,41 +196,86 @@ a:visited {
 
 .headline p.visible {
     opacity: 1;
-    animation: push-in 0.6s;
+    -webkit-animation: push-in 0.6s;
+            animation: push-in 0.6s;
 }
 .headline p.hidden {
     opacity: 0;
-    animation: push-out 0.6s;
+    -webkit-animation: push-out 0.6s;
+            animation: push-out 0.6s;
+}
+
+@-webkit-keyframes push-in {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(-150%, -50%);
+            transform: translate(-150%, -50%);
+  }
+  60% {
+    opacity: 1;
+    -webkit-transform: translate(-40%, -50%);
+            transform: translate(-40%, -50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+
 }
 
 @keyframes push-in {
   0% {
     opacity: 0;
-    transform: translate(-150%, -50%);
+    -webkit-transform: translate(-150%, -50%);
+            transform: translate(-150%, -50%);
   }
   60% {
     opacity: 1;
-    transform: translate(-40%, -50%);
+    -webkit-transform: translate(-40%, -50%);
+            transform: translate(-40%, -50%);
   }
   100% {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
 
+}
+
+@-webkit-keyframes push-out {
+  0% {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  60% {
+    opacity: 0;
+    -webkit-transform: translate(160%, -50%);
+            transform: translate(160%, -50%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translate(150%, -50%);
+            transform: translate(150%, -50%);
+  }
 }
 
 @keyframes push-out {
   0% {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
   60% {
     opacity: 0;
-    transform: translate(160%, -50%);
+    -webkit-transform: translate(160%, -50%);
+            transform: translate(160%, -50%);
   }
   100% {
     opacity: 0;
-    transform: translate(150%, -50%);
+    -webkit-transform: translate(150%, -50%);
+            transform: translate(150%, -50%);
   }
 }
 
