--- a/style/main.css
+++ b/style/main.css
@@ -12,15 +12,6 @@
     text-align : center;
 }
 
-.gradient {
-    background-image : linear-gradient(60deg, red, #f06d06);
-}
-
-.bg-circle {
-    background-image  : url("../img/circle.svg");
-    background-repeat : repeat;
-}
-
 /*  Positioning  */
 .absolute {
     position : absolute;
@@ -144,6 +135,12 @@ h1, h2 {
     font-weight: 400;
     font-size: 2.5em;
     margin-bottom: 0em;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin: 0em;
+    padding: 0.25em;
 }
 
 header h1 {
