--- a/style/main.css
+++ b/style/main.css
@@ -62,16 +62,35 @@ body {
 
 .container {
     padding: 0.5em;
-    text-align: center;
 }
 
-#logo {
-    height: 100%;
-    width: 100%;
+.masthead div.container {
+    height: 80%;
+}
+
+.masthead section.absolute {
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.masthead .teaser {
+    top: 50%;
+    transform: translate(-50%, -50%) !important;
+
     z-index: -1;
 }
 
-/* User Interface*/
+.masthead .summary {
+    bottom: 5%;
+}
+
+#teaser {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+/* User Interface */
 
 .button {
     border-style: solid;
@@ -92,24 +111,23 @@ body {
     box-shadow: 2px 1px 5px #010101;
 }
 
-.masthead div.container {
-    height: 60%;
-}
+/* Headlines */
 
 .headline {
-    position: relative;
-    display: inline-block;
-    margin: 10px;
-    padding: 10px;
+    display: block;
+    margin: 0em;
+    padding: 0.25em;
     text-align: center;
+    height: 2.5em;
 }
 
 .headline p {
+    margin: 0em;
     opacity: 0;
     position: absolute;
-    top: 50%;
+    top: 0%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
 }
 
 /*
@@ -188,30 +206,30 @@ a:visited {
 @keyframes push-in {
   0% {
     opacity: 0;
-    transform: translate(-110%, -50%);
+    transform: translate(-110%, 0%);
   }
   60% {
     opacity: 1;
-    transform: translate(-40%, -50%);
+    transform: translate(-40%, 0%);
   }
   100% {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
   }
 }
 
 @keyframes push-out {
   0% {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
   }
   60% {
     opacity: 0;
-    transform: translate(20%, -50%);
+    transform: translate(20%, 0%);
   }
   100% {
     opacity: 0;
-    transform: translate(10%, -50%);
+    transform: translate(10%, 0%);
   }
 }
 
