--- a/style/main.css
+++ b/style/main.css
@@ -148,7 +148,7 @@ body {
 }
 
 /* Headings */
-h1, h2 {
+h1 {
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 2.5em;
@@ -163,6 +163,10 @@ h2 {
 
 header h1 {
     font-weight: bold;
+}
+
+header .tagline {
+    margin: 0.5em 0.5em;
 }
 
 /* Transition Text */
