--- a/style/main.css
+++ b/style/main.css
@@ -70,12 +70,14 @@ body {
 
 .masthead section.absolute {
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 
 .masthead .teaser {
     top: 50%;
-    transform: translate(-50%, -50%) !important;
+    -webkit-transform: translate(-50%, -50%) !important;
+            transform: translate(-50%, -50%) !important;
 
     z-index: -1;
 }
@@ -127,7 +129,8 @@ body {
     position: absolute;
     top: 0%;
     left: 50%;
-    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
 }
 
 /*
@@ -230,30 +233,54 @@ a:visited {
 @keyframes push-in {
   0% {
     opacity: 0;
-    transform: translate(-110%, 0%);
+    -webkit-transform: translate(-110%, 0%);
+            transform: translate(-110%, 0%);
   }
   60% {
     opacity: 1;
-    transform: translate(-40%, 0%);
+    -webkit-transform: translate(-40%, 0%);
+            transform: translate(-40%, 0%);
   }
   100% {
     opacity: 1;
-    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+  }
+}
+
+@-webkit-keyframes push-out {
+  0% {
+    opacity: 1;
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+  }
+  60% {
+    opacity: 0;
+    -webkit-transform: translate(20%, 0%);
+            transform: translate(20%, 0%);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translate(10%, 0%);
+            transform: translate(10%, 0%);
   }
 }
 
 @keyframes push-out {
   0% {
     opacity: 1;
-    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
   }
   60% {
     opacity: 0;
-    transform: translate(20%, 0%);
+    -webkit-transform: translate(20%, 0%);
+            transform: translate(20%, 0%);
   }
   100% {
     opacity: 0;
-    transform: translate(10%, 0%);
+    -webkit-transform: translate(10%, 0%);
+            transform: translate(10%, 0%);
   }
 }
 
