--- a/style/main.css
+++ b/style/main.css
@@ -104,11 +104,18 @@ body {
     }
 }
 
-@media screen and (max-height: 699px) {
+@media screen and (min-height: 540px) and (max-height: 699px) {
     #teaser {
         height: 400px;
     }
 }
+
+@media screen and (max-height: 539px) {
+    #teaser {
+        height: 330px;
+    }
+}
+
 
 
 /* User Interface */
