--- a/style/main.css
+++ b/style/main.css
@@ -93,21 +93,30 @@ body {
 @media screen and (min-height: 870px) {
     #teaser {
         height: 700px;
+        width: 700px;
     }
 }
 
 @media screen and (min-height: 700px) and (max-height: 869px) {
     #teaser {
         height: 500px;
+        width: 500px;
     }
 }
 
-@media screen and (max-height: 699px) {
+@media screen and (min-height: 540px) and (max-height: 699px) {
     #teaser {
         height: 400px;
+        width: 400px;
     }
 }
 
+@media screen and (max-height: 539px) {
+    #teaser {
+        height: 330px;
+        width: 400px;
+    }
+}
 
 /* User Interface */
 
@@ -184,8 +193,14 @@ header h1 {
     font-weight: bold;
 }
 
-header .tagline {
-    margin: 0.5em 0.5em;
+.tagline {
+    margin: 0em;
+    padding: 0em;
+    white-space: nowrap;
+}
+
+.tagline:last-of-type {
+    margin-bottom: 0.5em;
 }
 
 /* Transition Text */
@@ -195,9 +210,6 @@ header .tagline {
     white-space: nowrap;
 }
 
-.tagline {
-    white-space: nowrap;
-}
 
 /* Links */
 a {
