--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -347,7 +347,8 @@ body : before {
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display:block;
-  /*margin-top:10px;*/
+  margin-top:px;
+  color:white;
 }
 
 .jumbotron {
